--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -57,14 +57,3 @@ button {
     outline: 4px auto -webkit-focus-ring-color;
   }
 }
-
-
-// SVG styles
-
-.line {
-  fill: var(--accentPrimary);
-}
-
-.stripes {
-  fill: var(--accentSecondary);
-}
